--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello, welcome to sexism.nebulas.lol!</h1>
-    <p>This is a sample page.</p>
+    <p>This is a sample page..</p>
 </body>
 </html>
