--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Sexism</title>
-</head>
-<body>
-    <h1>Hello, welcome to sexism.nebulas.lol!</h1>
-    <p>This is a sample page..</p>
-</body>
-</html>
+subdomain test 
